plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
	id 'org.sonarqube' version '5.0.0.4638'
}

group = 'com.banco'
version = '0.0.1-SNAPSHOT'

java {
	targetCompatibility = 17
	sourceCompatibility = 17
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql:42.7.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'com.h2database:h2:2.2.222'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
test {
	finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
	dependsOn test
	afterEvaluate {
		classDirectories.setFrom(
				files(classDirectories.files.collect {
					fileTree(dir: it, exclude: [
							'com/banco/arquitectura/controller/dto/**',
							'com/banco/arquitectura/ArquitecturaApplication.class'
					])
				})
		)
	}
	reports {
		xml.required.set(true)
		html.required.set(true)
	}
}
sonar {
	properties {
		property 'sonar.projectKey', 'banco_backend'
	}

}
